--- a/frontend/src/app/login-pop-up/login-pop-up.component.css
+++ b/frontend/src/app/login-pop-up/login-pop-up.component.css
@@ -8,3 +8,13 @@
   75%  {transform: scale(1.1)}
   100% {transform: scale(1)}
 }
+.modal-content{
+  animation-name: example;
+  animation-duration: 0.3s;
+}
+
+@keyframes example {
+  0%   {transform: scale(0.5)}
+  75%  {transform: scale(1.1)}
+  100% {transform: scale(1)}
+}
